fix: 修复页面出现谜之 overflow 的问题

--- a/classisland.managementserver.client/src/styles/index.less
+++ b/classisland.managementserver.client/src/styles/index.less
@@ -3,3 +3,7 @@
 html {
   overflow-y: hidden !important;
 }
+
+.n-layout .n-layout-scroll-container {
+  height: calc(100% + 1px) !important;
+}
